# pi-guard

./: .gitignore  README.md
docs/: 数据流.md
docs/agent/: 工程结构.md  技术方案-capture-audio.md  (+5 more)
project/agent/: CMakeLists.txt
project/agent/build-agent/: CTestTestfile.cmake  DartConfiguration.tcl  pi-guard-agent
project/agent/build-agent/tests/: CTestTestfile.cmake  pi_guard_foundation_tests
project/agent/cli/: CMakeLists.txt  view_video.cpp
project/agent/cli/mp4/: CMakeLists.txt  main.cpp  mp4_writer.cpp  mp4_writer.hpp
project/agent/cli/preview-video/: CMakeLists.txt  frame_converter.cpp  frame_converter.hpp  frame_viewer_consumer.cpp  frame_viewer_consumer.hpp  main.cpp  v4l2_capture_session.cpp  v4l2_capture_session.hpp  view_video.cpp
project/agent/cli/record-audio/: CMakeLists.txt  main.cpp  recording_consumer.cpp  recording_consumer.hpp  shutdown_manager.cpp  shutdown_manager.hpp  wav_writer.cpp  wav_writer.hpp
project/agent/cli/srs/: CMakeLists.txt  README.md  main.cpp
project/agent/include/piguard/: version.hpp
project/agent/src/: main.cpp
project/agent/src/app/: agent_app.cpp  agent_app.hpp
project/agent/src/capture/audio/: audio_capture.cpp  audio_capture.hpp
project/agent/src/capture/video/: video_capture.cpp  video_capture.hpp
project/agent/src/core/: module.hpp  thread_safe_queue.hpp  types.hpp
project/agent/src/external_access/: CMakeLists.txt
project/agent/src/external_access/http/: http_notify.cpp  http_notify.hpp
project/agent/src/external_access/pusher/: rtmp_pusher.cpp  rtmp_pusher.hpp
project/agent/src/external_access/websocket/: websocket_client.cpp  websocket_client.hpp
project/agent/src/foundation/: CMakeLists.txt  shutdown_manager.cpp
project/agent/src/foundation/include/foundation/: module.hpp  shutdown_manager.hpp
project/agent/src/foundation/public/: thread_safe_queue.hpp  types.hpp
project/agent/src/infra/config/: config_manager.cpp  config_manager.hpp
project/agent/src/infra/event_bus/: event_bus.cpp  event_bus.hpp
project/agent/src/infra/log/: logger.cpp  logger.hpp
project/agent/src/infra/perf_monitor/: perf_monitor.cpp  perf_monitor.hpp
project/agent/src/modules/capture/: CMakeLists.txt
project/agent/src/modules/capture/audio/: CMakeLists.txt  audio_capture.cpp  audio_capture_module.cpp  audio_capture_provider.cpp
project/agent/src/modules/capture/audio/include/capture_audio/: audio_capture.hpp  audio_capture_module.hpp  audio_capture_provider.hpp  audio_frame.hpp  consumer_base.hpp
project/agent/src/modules/capture/public/: audio_capture.hpp  video_capture.hpp
project/agent/src/modules/capture/video/: CMakeLists.txt  video_capture.cpp  video_capture_module.cpp  video_capture_provider.cpp
project/agent/src/modules/capture/video/include/capture_video/: consumer_base.hpp  video_capture.hpp  video_capture_module.hpp  video_capture_provider.hpp  video_frame.hpp
project/agent/src/modules/external_access/: CMakeLists.txt
project/agent/src/modules/external_access/http/: CMakeLists.txt  http_notify.cpp
project/agent/src/modules/external_access/http/include/access_http/: http_notify.hpp
project/agent/src/modules/external_access/public/: http_notify.hpp  rtmp_pusher.hpp  websocket_client.hpp
project/agent/src/modules/external_access/pusher/: CMakeLists.txt  rtmp_pusher.cpp
project/agent/src/modules/external_access/pusher/include/access_pusher/: rtmp_pusher.hpp
project/agent/src/modules/external_access/websocket/: CMakeLists.txt  websocket_client.cpp
project/agent/src/modules/external_access/websocket/include/access_websocket/: websocket_client.hpp
project/agent/src/modules/infra/: CMakeLists.txt
project/agent/src/modules/infra/config/: CMakeLists.txt  config_manager.cpp
project/agent/src/modules/infra/config/include/infra_config/: config_manager.hpp
project/agent/src/modules/infra/event_bus/: CMakeLists.txt  event_bus.cpp
project/agent/src/modules/infra/event_bus/include/infra_event/: event_bus.hpp
project/agent/src/modules/infra/log/: CMakeLists.txt  log_module.cpp  logger.cpp  logger_factory.cpp  spd_logger.cpp  spd_logger.hpp
project/agent/src/modules/infra/log/include/infra_log/: log_module.hpp  logger.hpp  logger_factory.hpp
project/agent/src/modules/infra/perf_monitor/: CMakeLists.txt  perf_monitor.cpp
project/agent/src/modules/infra/perf_monitor/include/infra_monitor/: perf_monitor.hpp
project/agent/src/modules/infra/public/: config_manager.hpp  event_bus.hpp  logger.hpp  perf_monitor.hpp
project/agent/src/modules/output/: CMakeLists.txt
project/agent/src/modules/output/audio/: CMakeLists.txt  audio_playback.cpp
project/agent/src/modules/output/audio/include/output_audio/: audio_playback.hpp
project/agent/src/modules/output/file/: CMakeLists.txt  file_writer.cpp
project/agent/src/modules/output/file/include/output_file/: file_writer.hpp
project/agent/src/modules/output/public/: audio_playback.hpp  file_writer.hpp
project/agent/src/modules/processing/: CMakeLists.txt
project/agent/src/modules/processing/echo_canceller/: CMakeLists.txt  echo_canceller.cpp
project/agent/src/modules/processing/encoder/: CMakeLists.txt  audio_provider_adapter.cpp  encoder.cpp  encoder_module.cpp  video_provider_adapter.cpp
project/agent/src/modules/processing/motion_detect/: CMakeLists.txt  motion_detect.cpp
project/agent/src/modules/processing/public/: echo_canceller.hpp  encoder.hpp  motion_detect.hpp
project/agent/src/output/audio/: audio_playback.cpp  audio_playback.hpp
project/agent/src/output/file/: file_writer.cpp  file_writer.hpp
project/agent/src/processing/echo_canceller/: echo_canceller.cpp  echo_canceller.hpp
project/agent/src/processing/encoder/: encoder.cpp  encoder.hpp
project/agent/src/processing/motion_detect/: motion_detect.cpp  motion_detect.hpp
project/agent/src/runtime/: CMakeLists.txt
project/agent/src/runtime/app/: agent_app.cpp
project/agent/src/runtime/include/: agent_app.hpp
project/agent/src/runtime/public/: agent_app.hpp
project/agent/tests/: CMakeLists.txt
project/agent/tests/foundation/: thread_safe_queue_test.cpp
(+32 files in other folders)
